# mlops-corise

./: .gitignore  project-week-01.ipynb  pyproject.toml  readme.md
app/: eval.py  eval_aug_naive.py  eval_full.py  eval_sample_kmeans.py
app/data/: prepare_agnews.py
notebooks/: week01-e01-eda.ipynb  week01-e02-error-analysis.ipynb
