[tool.poetry]
name = "mlops-corise"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
numba = "^0.55.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
click = "^8.1.3"
pandas = "^1.4.3"
gensim = "^4.2.0"
sentence-transformers = "^2.2.2"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
